# predictduel

./: .gitignore  LOGIN_OPTIONS.md  MONGODB_QUICK_START.md  MONGODB_SETUP.md  NAVIGATION_FIXES.md  ONBOARDING_FLOW.md  PRIVY_SETUP.md  PROJECT_STATUS.md  README.md  SETUP.md  empty-module.js  env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/debug-wallet/: page.tsx
app/duel/: page.tsx
app/duels/: page.tsx
app/feed/: page.tsx
app/leaderboard/: page.tsx
app/lightning/: page.tsx
lib/: api-helpers.ts  blockchain-config.ts  idl.ts  mongodb.ts  predict_duel_idl.json  privy-helpers.ts  solana-bet.ts  solana-claim.ts  solana-client.ts  solana-market.ts  solana-resolve.ts  solana-rpc.ts  solana-transaction-wrapper.ts  wallet-balance.ts  wallet-debug.ts
models/: Achievement.ts  Comment.ts  Duel.ts  Notification.ts  Prediction.ts  ProbabilityHistory.ts  User.ts
scripts/: seed-achievements.ts  test-resolve.md
solana-program/: .dockerignore  .gitignore  Anchor.toml  CHECK_PROGRAM_ID.md  CONCEPT.md  Cargo.toml  DEPLOY.md  DEPLOY_STEPS.md  Dockerfile  Makefile  README.md  docker-build.sh  docker-compose.yml  package.json
solana-program/.cargo/: config.toml
solana-program/client/: example-integration.ts  sdk.ts
solana-program/programs/predict-duel/: Cargo.toml
solana-program/programs/predict-duel/src/: lib.rs
solana-program/scripts/: deploy.sh
solana-program/src/: lib.rs
solana-program/tests/: predict-duel.ts
types/: global.d.ts
(+48 files in other folders)
