[package]
name = "predict-duel"
version = "0.1.0"
description = "Prediction Market Smart Contract for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "predict_duel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[profile.release]
overflow-checks = true